--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Git is awesome</h1>
+    <p>
+        Hi this is Bhagyashree.
+        I live in Bangalore.
+    </p>    
 </body>
 </html>
