--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Git is awesome</h1>
-    <p>
-        Hi this is Bhagyashree.
-        I live in Bangalore.
-    </p>    
+    <h1>Hi there</h1>    
 </body>
 </html>
